==> jameswalmsley/bitthunder/arch/arm/mach/lm3sxx/i2c.c <==
#include <bitthunder.h>	 				// Include all those wonderful BitThunder APIs.
#include "i2c.h"						// Includes a full hardware definition for the integrated I2Cs.
#include "rcc.h"						// Used for getting access to rcc regs, to determine the real Clock Freq.
#include "ioconfig.h"					// Used for getting access to IOCON regs.
#include <collections/bt_fifo.h>

static void ResetI2C(BT_HANDLE hI2C)
{
	volatile LM3Sxx_I2C_REGS *pRegs = hI2C->pRegs;

	pRegs->LM3Sxx_I2C_MCR = 0x00000000;

}

static BT_ERROR i2c_set_clock_rate(BT_HANDLE hI2C, BT_I2C_CLOCKRATE eClockrate) {
	volatile LM3Sxx_I2C_REGS *pRegs = hI2C->pRegs;

	BT_u32 ulInputClk;
	BT_u32 ulClock;

	/*
	 *	We must determine the input clock frequency to the I2C peripheral.
	 */

	ulInputClk = BT_LM3Sxx_GetSystemFrequency();

	switch (eClockrate) {
	case BT_I2C_CLOCKRATE_100kHz: {
		ulClock = 100000;
		break;
	}
	case BT_I2C_CLOCKRATE_400kHz: {
		ulClock = 400000;
		break;
	}
	case BT_I2C_CLOCKRATE_1000kHz: {
		ulClock = 1000000;
		break;
	}
	case BT_I2C_CLOCKRATE_3400kHz: {
		ulClock = 3400000;
		break;
	}
	default: {
		ulClock = 100000;
		break;
	}
	}
	pRegs->LM3Sxx_I2C_MTPR = (ulInputClk / (ulClock*20)) - 1;

	return BT_ERR_NONE;
}

static void enablei2cPeripheralClock(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->i2c_master.pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_I2C0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_I2C1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disablei2cPeripheralClock(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->i2c_master.pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_I2C0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_I2C1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isi2cPeripheralClockEnabled(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->i2c_master.pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_I2C0EN) {
			return BT_TRUE;
		}
		break;
	}
	case 1: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_I2C1EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}

static BT_ERROR i2cEnable(BT_HANDLE hI2C) {
	hI2C->pRegs->LM3Sxx_I2C_MCR = LM3Sxx_I2C_MCR_MASTER_MODE;

	return BT_ERR_NONE;
}

static BT_ERROR i2cRead(BT_HANDLE hI2C, BT_u16 usDevice, BT_u8 *pucDest, BT_u32 ulLength) {
	volatile LM3Sxx_I2C_REGS *pRegs = hI2C->pRegs;
	BT_ERROR Error = BT_ERR_NONE;

	pRegs->LM3Sxx_I2C_MSA = (usDevice<<1) | LM3Sxx_I2C_MASTER_SA_RS;

    // Send out the number of bytes requested.
	BT_u32 i;
	for (i=0; i<ulLength; i++) {
		pRegs->LM3Sxx_I2C_MICR = LM3Sxx_I2C_MICR_IC;

		// Initiate bus cycle
		BT_u32 ulCondition = LM3Sxx_I2C_MCS_RUN;
        if (i == 0) ulCondition |= LM3Sxx_I2C_MCS_START;
        if (i == ulLength-1) ulCondition |= LM3Sxx_I2C_MCS_STOP;
        else ulCondition |= LM3Sxx_I2C_MCS_DATACK;
        pRegs->LM3Sxx_I2C_MCS = ulCondition;

        // Wait for transmission to complete.
        while (!(pRegs->LM3Sxx_I2C_MRIS & LM3Sxx_I2C_MRIS_RIS));
    	if (pRegs->LM3Sxx_I2C_MCS & LM3Sxx_I2C_MCS_ADRACK) {
    		Error = -1;		// no address acknowledge
    		break;
    	}

        // Receive a byte from the I2C.
        *pucDest++ = pRegs->LM3Sxx_I2C_MDR;
    }
	while (pRegs->LM3Sxx_I2C_MCS & LM3Sxx_I2C_MCS_BUSBSY);

	return Error;
}

static BT_ERROR i2cWrite(BT_HANDLE hI2C, BT_u16 usDevice, BT_u8 *pucSource, BT_u32 ulLength) {
	volatile LM3Sxx_I2C_REGS *pRegs = hI2C->pRegs;
	BT_ERROR Error = BT_ERR_NONE;

	pRegs->LM3Sxx_I2C_MSA = usDevice<<1;

	BT_u32 i;

	for (i=0; i<ulLength; i++) {
		pRegs->LM3Sxx_I2C_MICR = LM3Sxx_I2C_MICR_IC;

		// Send out the next byte.
        pRegs->LM3Sxx_I2C_MDR = *pucSource++;

        // Initiate bus cycle
        BT_u32 ulCondition = LM3Sxx_I2C_MCS_RUN;
        if (i == 0) ulCondition |= LM3Sxx_I2C_MCS_START;
        if (i == ulLength-1) ulCondition |= LM3Sxx_I2C_MCS_STOP;
        pRegs->LM3Sxx_I2C_MCS = ulCondition;

        // Wait for transmission to complete.
        while (!(pRegs->LM3Sxx_I2C_MRIS & LM3Sxx_I2C_MRIS_RIS));

    	if (pRegs->LM3Sxx_I2C_MCS & (LM3Sxx_I2C_MCS_ADRACK | LM3Sxx_I2C_MCS_DATACK)) {
    		Error = -1;		// no address acknowledge
    		break;
    	}
	}

	return Error;
}

static BT_HANDLE i2c_probe(const BT_INTEGRATED_DEVICE *pDevice, BT_ERROR *pError) {

	BT_ERROR Error = BT_ERR_NONE;
	BT_HANDLE hI2C = NULL;

	const BT_RESOURCE *pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_MEM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	hI2C = BT_CreateHandle(&oHandleInterface, sizeof(struct _BT_OPAQUE_HANDLE), pError);
	if(!hI2C) {
		goto err_out;
	}

	hI2C->pRegs = (LM3Sxx_I2C_REGS *) pResource->ulStart;


	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_ENUM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	hI2C->i2c_master.pDevice = pDevice;

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_INTEGER, 0);
	if(!pResource) {
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

	i2cSetPowerState(hI2C, BT_POWER_STATE_AWAKE);

	// Reset all registers to their defaults!
	ResetI2C(hI2C);

	i2cEnable(hI2C);

	i2c_set_clock_rate(hI2C, pResource->ulStart);

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_IRQ, 0);
	if(!pResource) {
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

/*	On NVIC we don't need to register interrupts, LINKER has patched vector for us
 * Error = BT_RegisterInterrupt(pResource->ulStart, I2C_irq_handler, hI2C);
	if(Error) {
		goto err_free_out;
	}*/


	//@@Error = BT_EnableInterrupt(pResource->ulStart);

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_BUSID, 0);
	if(!pResource) {
		goto err_free_out;
	}

	BT_u32 ulBusID = pResource->ulStart;

	hI2C->i2c_master.ulBusID	= ulBusID;
	hI2C->i2c_master.hBus 		= hI2C;		// Save pointer to bus's private data.
	hI2C->i2c_master.pDevice 	= pDevice;


	BT_I2C_RegisterBus(&hI2C->i2c_master);

	if(pError) {
		*pError = Error;
	}

	return hI2C;

err_free_out:
	BT_DestroyHandle(hI2C);

err_out:
	if(pError) {
		*pError = Error;
	}
	return NULL;
}
