==> jameswalmsley/bitthunder/arch/arm/mach/lpc17xx/i2c.c <==
#include <bitthunder.h>	 				// Include all those wonderful BitThunder APIs.
#include "i2c.h"						// Includes a full hardware definition for the integrated I2Cs.
#include "rcc.h"						// Used for getting access to rcc regs, to determine the real Clock Freq.
#include "ioconfig.h"					// Used for getting access to IOCON regs.
#include <collections/bt_fifo.h>

static void ResetI2C(BT_HANDLE hI2C)
{
	volatile LPC17xx_I2C_REGS *pRegs = hI2C->pRegs;

	pRegs->LPC17xx_I2C_CONCLR = 0xFFFFFFFF;

}

static BT_ERROR i2cSetClockrate(BT_HANDLE hI2C, BT_I2C_CLOCKRATE eClockrate) {
	volatile LPC17xx_I2C_REGS *pRegs = hI2C->pRegs;

	BT_u32 ulInputClk;
	BT_u32 ulClock;
	BT_u32 ulClkPeriod;

	/*
	 *	We must determine the input clock frequency to the I2C peripheral.
	 */

	ulInputClk = BT_LPC17xx_GetPeripheralClock(g_I2C_PERIPHERAL[hI2C->pDevice->id]);

	/*
	 * Determine the Baud divider. It can be 4to 254.
	 * Loop through all possible combinations
	 */

	switch (eClockrate) {
	case BT_I2C_CLOCKRATE_100kHz: {
		ulClock = 100000;
		break;
	}
	case BT_I2C_CLOCKRATE_400kHz: {
		ulClock = 400000;
		break;
	}
	case BT_I2C_CLOCKRATE_1000kHz: {
		ulClock = 1000000;
		break;
	}
	case BT_I2C_CLOCKRATE_3400kHz: {
		ulClock = 3400000;
		break;
	}
	default: {
		ulClock = 100000;
		break;
	}
	}
	ulClkPeriod = ulInputClk / ulClock;

	pRegs->LPC17xx_I2C_SCLH = ulClkPeriod / 2;
	pRegs->LPC17xx_I2C_SCLL = ulClkPeriod - pRegs->LPC17xx_I2C_SCLH;

	return BT_ERR_NONE;
}

static void enablei2cPeripheralClock(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_I2C0EN;
		break;
	}
	case 1: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_I2C1EN;
		break;
	}
	case 2: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_I2C2EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disablei2cPeripheralClock(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_I2C0EN;
		break;
	}
	case 1: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_I2C1EN;
		break;
	}
	case 2: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_I2C2EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isi2cPeripheralClockEnabled(BT_HANDLE hI2C) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hI2C->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_I2C0EN) {
			return BT_TRUE;
		}
		break;
	}
	case 1: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_I2C1EN) {
			return BT_TRUE;
		}
		break;
	}
	case 2: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_I2C2EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}

static BT_ERROR i2cEnable(BT_HANDLE hI2C) {
	volatile LPC17xx_I2C_REGS *pRegs = hI2C->pRegs;

	pRegs->LPC17xx_I2C_CONSET |= LPC17xx_I2C_CONSET_I2EN;

	return BT_ERR_NONE;
}

static BT_ERROR i2cRead(BT_HANDLE hI2C, BT_u8 ucDevice, BT_u8 *pucDest, BT_u32 ulLength) {

	BT_ERROR Error = BT_ERR_NONE;

	switch(hI2C->eMode) {
	case BT_I2C_MODE_POLLED:
	{
		i2cStart(hI2C);
		Error = i2cSendAddress(hI2C, ucDevice, BT_I2C_READ_ACCESS);
		if (Error) goto err_out;
		Error = i2cGetData(hI2C, pucDest, ulLength);
		if (Error) goto err_out;
		Error = i2cStop(hI2C);

		break;
	}

	case BT_I2C_MODE_BUFFERED:
	{
		// Get bytes from RX buffer very quickly.
		break;
	}

	default:
		// ERR, invalid handle configuration.
		break;
	}
	return Error;

err_out:
	i2cStop(hI2C);
	return Error;
}

static BT_ERROR i2cWrite(BT_HANDLE hI2C, BT_u8 ucDevice, BT_u8 *pucSource, BT_u32 ulLength) {
	BT_ERROR Error = BT_ERR_NONE;

	switch(hI2C->eMode) {
	case BT_I2C_MODE_POLLED:
	{
		i2cStart(hI2C);
		Error = i2cSendAddress(hI2C, ucDevice, BT_I2C_WRITE_ACCESS);
		if (Error) goto err_out;
		Error = i2cSendData(hI2C, pucSource, ulLength);
		if (Error) goto err_out;
		Error = i2cStop(hI2C);
		break;
	}

	case BT_I2C_MODE_BUFFERED:
	{
		break;
	}

	default:
		break;
	}
	return Error;

err_out:
	i2cStop(hI2C);
	return Error;
}

static BT_HANDLE i2c_probe(const BT_INTEGRATED_DEVICE *pDevice, BT_ERROR *pError) {

	BT_ERROR Error = BT_ERR_NONE;
	BT_HANDLE hI2C = NULL;


	const BT_RESOURCE *pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_ENUM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	if (g_I2C_HANDLES[pResource->ulStart]){
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

	hI2C = BT_CreateHandle(&oHandleInterface, sizeof(struct _BT_OPAQUE_HANDLE), pError);
	if(!hI2C) {
		goto err_out;
	}

	g_I2C_HANDLES[pResource->ulStart] = hI2C;

	hI2C->pDevice = pDevice;

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_MEM, 0);
	if(!pResource) {
		Error = BT_ERR_NO_MEMORY;
		goto err_free_out;
	}

	hI2C->pRegs = (LPC17xx_I2C_REGS *) pResource->ulStart;

	i2cSetPowerState(hI2C, BT_POWER_STATE_AWAKE);

	// Reset all registers to their defaults!

	ResetI2C(hI2C);

	pResource = BT_GetIntegratedResource(pDevice, BT_RESOURCE_IRQ, 0);
	if(!pResource) {
		Error = BT_ERR_GENERIC;
		goto err_free_out;
	}

/*	On NVIC we don't need to register interrupts, LINKER has patched vector for us
 * Error = BT_RegisterInterrupt(pResource->ulStart, I2C_irq_handler, hI2C);
	if(Error) {
		goto err_free_out;
	}*/


	//@@Error = BT_EnableInterrupt(pResource->ulStart);

	return hI2C;

err_free_out:
	BT_DestroyHandle(hI2C);

err_out:
	if(pError) {
		*pError = Error;
	}
	return NULL;
}
